--- a/pages/20190404.html
+++ b/pages/20190404.html
@@ -22,7 +22,7 @@
 					 <!-- , a designer<br />
 					Welcome to my personal website -->
 				</h1>
-				<a href="../blog.html">
+				<a href="../index.html">
 					<< BACK
 				</a>
 			</div>
